# options ordered by relevance

# list of component source files
COMPONENTS:=\
CoordMask.cpp

# additional objects besides the components
OBJ:=

# additional test cases
TST:=

# additional compiler flags
COMPONENT_FLAGS:=

# additional headers to install (that are not in OBJ or COMPONENTS)
HDR:=

include ../Components.am
